[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/04B_30__.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 266, 142 )
color = Color( 0.101961, 0.109804, 0.423529, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.517
anchor_top = 0.5
anchor_right = 0.517
anchor_bottom = 0.5
margin_left = -178.408
margin_top = -14.0
margin_right = 170.592
margin_bottom = 111.0
__meta__ = {
"_edit_group_": true
}

[node name="Mouse Control" type="CheckBox" parent="VBoxContainer"]
margin_right = 349.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
pressed = true
text = "Jogar no mouse"

[node name="Keyboard Control" type="CheckBox" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 349.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "Jogar no teclado"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 349.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "Voltar"

[node name="Label" type="Label" parent="."]
margin_left = 345.0
margin_top = 139.0
margin_right = 700.0
margin_bottom = 204.0
custom_fonts/font = SubResource( 1 )
text = "Options"

[connection signal="pressed" from="VBoxContainer/Mouse Control" to="." method="_on_Mouse_Control_pressed"]
[connection signal="pressed" from="VBoxContainer/Keyboard Control" to="." method="_on_Keyboard_Control_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
